# MAGG

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: extract_pdf.py  qa_server.py  run_demo.py  run_full_test.py  run_pipeline.py
experiments/: README.md  __init__.py  evaluate_kg.py  qa_support.py  run_evaluation.py
experiments/hotpotqa/: build_hotpotqa_governed_kg.py  prepare_hotpotqa_pilot.py  run_hotpotqa_kg_qa.py  run_hotpotqa_official_graphrag.py  run_hotpotqa_rag.py  run_official_graphrag_qa.py  summarize_hotpotqa_results.py
experiments/kgafe/: __init__.py  analyze_ablation_results.py  atomic_decomposer.py  baselines.py  benchmark_generator.py  evaluator.py  export_human_eval.py  judge_panel.py  run_ablations.py  run_kgafe.py  run_pairwise_judge.py  triple_verifier.py
experiments/musique/: build_musique_governed_kg.py  build_musique_governed_kg_combined.py  build_supporting_only_pilot.py  postprocess_musique_short_answers.py  prepare_musique_pilot.py  run_musique_kg_qa.py  run_musique_official_graphrag.py  run_musique_rag.py  run_musique_source_verified_qa.py
experiments/scierc/: analyze_scierc_build.py  build_governed_scierc.py  build_ungoverned_scierc.py  canonicalize_scierc_relations.py  compare_50doc_governed_vs_ungoverned.py  filter_fixed_schema_kg_by_confidence.py  run_governance_replay_ablation.py  run_governed_vs_ungoverned.py  (+3 more)
multi_agent_kg/: __init__.py
tests/: test_entity_extractor_values.py  test_governance.py  test_governed_kg.py  test_knowledge_organizer.py  test_llm_json_client.py  test_relation_extractor_pairwise.py
(+34 files in other folders)
